<resources>
    <string name="app_name">Калькулятор</string>
    <string name="zero_button">0</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="AC_button">AC</string>
    <string name="DEL_button">/</string>
    <string name="PROCENT_button">%</string>
    <string name="UMN_button">x</string>
    <string name="MINUS_button">-</string>
    <string name="PLUS_button">+</string>
    <string name="RAVNO_button">=</string>
    <string name="ZAP_button">,</string>
    <string name="MinusChislo_button">-()</string>

</resources>