<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:onClick="@string/one_button"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:layout_marginTop="140dp"
        android:autoText="false"
        android:gravity="right"
        android:paddingTop="50sp"
        android:text="0.0"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="78dp"
        android:onClick="acClick"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/AC_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:onClick="clickNumber"
        android:background="@drawable/roundedbutton"
        android:backgroundTintMode="screen"
        android:gravity="center"
        android:text="@string/MinusChislo_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:onClick="clickPercent"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/roundedbutton"
        android:gravity="center"
        android:text="@string/PROCENT_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:onClick="operation"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/thirdbutton"
        android:gravity="center"
        android:text="@string/DEL_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/seven_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/eight_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/nine_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:onClick="operation"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/thirdbutton"
        android:gravity="center"
        android:text="@string/UMN_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/four_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button10"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/five_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button11"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/six_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button12"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="20dp"
        android:onClick="operation"
        android:layout_marginTop="20dp"
        android:background="@drawable/thirdbutton"
        android:gravity="center"
        android:text="@string/MINUS_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button13"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:onClick="clickNumber"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/one_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button14"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:onClick="clickNumber"
        android:layout_marginTop="20dp"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/two_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button15"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="18dp"
        android:onClick="clickNumber"
        android:layout_marginTop="20dp"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/three_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button16"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:onClick="operation"
        android:background="@drawable/thirdbutton"
        android:gravity="center"
        android:text="@string/PLUS_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button17"
        android:layout_width="178dp"
        android:layout_height="78dp"
        android:onClick="clickNumber"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text="@string/zero_button"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button18"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/secondbuttons"
        android:gravity="center"
        android:text=","
        android:onClick="clickNumber"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button19"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="18dp"
        android:onClick="clickEqual"
        android:layout_marginTop="20dp"
        android:background="@drawable/thirdbutton"
        android:gravity="center"
        android:text="@string/RAVNO_button"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button15" />


</androidx.constraintlayout.widget.ConstraintLayout>